--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<header class="container-fluid header header-event">
+<header class="container-fluid header header-event" data-type="background" data-speed="10">
 	<div class="row">
 		<div class="header-title">
 			<div class="header-cell">
