--- a/restoraunt.html
+++ b/restoraunt.html
@@ -70,7 +70,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<header class="container-fluid header header-rest">
+<header class="container-fluid header header-rest" data-type="background" data-speed="10">
 	<div class="row">
 		<div class="header-title">
 			<div class="header-cell">
