--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<header class="container-fluid header header-menu">
+<header class="container-fluid header header-menu" data-type="background" data-speed="10">
 	<div class="row">
 		<div class="header-title">
 			<div class="header-cell">
